initial commit for sublayer latents

--- a/gencast_demo_cloud_vm copy.ipynb
+++ b/gencast_demo_cloud_vm copy.ipynb
@@ -44,19 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JAX version:    0.6.1\n",
-      "Default backend: gpu\n",
-      "Devices:        [CudaDevice(id=0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import jax\n",
     "print(\"JAX version:   \", jax.__version__)\n",
@@ -75,30 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "233zaiZYqCnc"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/software/anaconda3.24/lib/python3.12/pty.py:95: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-      "  pid, fd = os.forkpty()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting https://github.com/deepmind/graphcast/archive/master.zip\n",
-      "^C\n",
-      "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# @title Pip install repo and dependencies\n",
     "%pip install --upgrade https://github.com/deepmind/graphcast/archive/master.zip"
@@ -560,7 +531,8 @@
     "    [jax.random.fold_in(rng, i) for i in range(num_ensemble_members)], axis=0)\n",
     "\n",
     "chunks = []\n",
-    "for chunk in rollout.chunked_prediction_generator_multiple_runs(\n",
+    "latent_chunks = []\n",
+    "for chunk, latent_chunk in rollout.chunked_prediction_generator_multiple_runs(\n",
     "    # Use pmapped version to parallelise across devices.\n",
     "    predictor_fn=run_forward_pmap,\n",
     "    rngs=rngs,\n",
@@ -572,16 +544,61 @@
     "    pmap_devices=jax.local_devices()\n",
     "    ):\n",
     "    chunks.append(chunk)\n",
+    "    if latent_chunk is not None: latent_chunks.append(latent_chunk)\n",
     "predictions = xarray.combine_by_coords(chunks)\n",
+    "latent_representations = xarray.combine_by_coords(latent_chunks)\n",
+    "print(f\"Predictions: {predictions.dims}\")\n",
+    "print(f\"Latent representations: {latent_representations.dims if latent_representations else 'None'}\")\n",
+    "# if latent_representations and 'latent_representations' in latent_representations:\n",
+    "#   # Extract the DataArray from the Dataset and bring it to the CPU\n",
+    "#   latent_data_cpu = latent_representations['latent_representations'].compute()\n",
+    "  \n",
+    "#   num_timesteps = latent_data_cpu.sizes.get('time', 1)\n",
+    "#   num_samples = latent_data_cpu.sizes.get('sample', 1)\n",
+    "\n",
+    "#   for t in range(num_timesteps):\n",
+    "#     for s in range(num_samples):\n",
+    "#       # Select the slice for the current timestep and sample\n",
+    "#       data_slice = latent_data_cpu.isel(time=t, sample=s)\n",
+    "      \n",
+    "#       # Calculate statistics for the slice\n",
+    "#       total_elements = data_slice.size\n",
+    "#       nan_count = int(data_slice.isnull().sum())\n",
+    "      \n",
+    "#       if nan_count < total_elements:\n",
+    "#         # Exclude NaNs from these calculations for meaningful stats\n",
+    "#         zero_count = int((data_slice == 0).sum())\n",
+    "#         min_val = float(data_slice.min())\n",
+    "#         max_val = float(data_slice.max())\n",
+    "#         mean_val = float(data_slice.mean())\n",
+    "#         std_val = float(data_slice.std())\n",
+    "#       else:\n",
+    "#         # Handle the case where the entire slice is NaN\n",
+    "#         zero_count = 0\n",
+    "#         min_val = max_val = mean_val = std_val = 'N/A (all NaNs)'\n",
+    "\n",
+    "#       # Print the results for the slice\n",
+    "#       print(f\"--- Statistics for Timestep {t+1}, Sample {s+1} ---\")\n",
+    "#       print(f\"Shape: {data_slice.shape}\")\n",
+    "#       print(f\"Total number of elements: {total_elements:,}\")\n",
+    "#       print(f\"Number of NaN values:     {nan_count:,} ({nan_count/total_elements:.2%})\")\n",
+    "#       print(f\"Number of zero values:    {zero_count:,} ({zero_count/total_elements:.2%})\")\n",
+    "#       print(f\"Minimum value:            {min_val}\")\n",
+    "#       print(f\"Maximum value:            {max_val}\")\n",
+    "#       print(f\"Mean value:               {mean_val}\")\n",
+    "#       print(f\"Standard deviation:       {std_val}\")\n",
+    "#       print(\"--------------------------------------------------\\n\")\n",
+    "\n",
+    "# else:\n",
+    "#   print(\"No latent representations were generated to analyze.\")\n",
+    "\n",
     "print(\"done\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "wn7dccXO5R7C"
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# @title Plot prediction samples and diffs\n",
@@ -603,7 +620,7 @@
     "                          select(predictions.isel(sample=sample_idx), variable, level, steps)),\n",
     "                        robust=True, center=0),\n",
     "  }\n",
-    "  display.display(plot_data(data, fig_title + f\", Sample {sample_idx}\", plot_size, robust=True))\n"
+    "  display.display(plot_data(data, fig_title + f\", Sample {sample_idx}\", plot_size, robust=True))"
    ]
   },
   {
@@ -647,7 +664,65 @@
     "                        select(predictions, variable, level, steps)),\n",
     "                      robust=True, center=0),\n",
     "}\n",
-    "display.display(plot_data(data, fig_title, plot_size, robust=True))"
+    "display.display(plot_data(data, fig_title, plot_size, robust=True))\n",
+    "\n",
+    "# @title Compute ensemble mean of latent representations\n",
+    "\n",
+    "# @title Extract second timestep first, then compute ensemble mean\n",
+    "\n",
+    "if latent_representations and 'latent_representations' in latent_representations:\n",
+    "    # First, extract the second timestep from each ensemble member\n",
+    "    latent_timestep_2_all_samples = latent_representations['latent_representations'].isel(time=1)\n",
+    "    \n",
+    "    print(\"Original latent representations shape:\", latent_representations['latent_representations'].shape)\n",
+    "    print(\"Second timestep shape (all samples):\", latent_timestep_2_all_samples.shape)\n",
+    "    \n",
+    "    # Now compute the ensemble mean across the 'sample' dimension\n",
+    "    latent_timestep_2_ensemble_mean = latent_timestep_2_all_samples.mean(dim='sample')\n",
+    "    \n",
+    "    # Create a new dataset with the ensemble mean of the second timestep\n",
+    "    latent_timestep_2_dataset = xarray.Dataset({\n",
+    "        'latent_representations': latent_timestep_2_ensemble_mean\n",
+    "    })\n",
+    "    \n",
+    "    print(\"Final ensemble mean shape (second timestep only):\", latent_timestep_2_ensemble_mean.shape)\n",
+    "    \n",
+    "    # Calculate memory usage (approximate)\n",
+    "    # Assuming float32 (4 bytes per element)\n",
+    "    memory_bytes = latent_timestep_2_ensemble_mean.size * 4\n",
+    "    memory_mb = memory_bytes / (1024 * 1024)\n",
+    "    \n",
+    "    # Print statistics for the ensemble mean of the second timestep\n",
+    "    print(\"\\n--- Ensemble Mean of Second Timestep Latent Representations Statistics ---\")\n",
+    "    total_elements = latent_timestep_2_ensemble_mean.size\n",
+    "    nan_count = int(latent_timestep_2_ensemble_mean.isnull().sum())\n",
+    "    \n",
+    "    if nan_count < total_elements:\n",
+    "        zero_count = int((latent_timestep_2_ensemble_mean == 0).sum())\n",
+    "        min_val = float(latent_timestep_2_ensemble_mean.min())\n",
+    "        max_val = float(latent_timestep_2_ensemble_mean.max())\n",
+    "        mean_val = float(latent_timestep_2_ensemble_mean.mean())\n",
+    "        std_val = float(latent_timestep_2_ensemble_mean.std())\n",
+    "    else:\n",
+    "        zero_count = 0\n",
+    "        min_val = max_val = mean_val = std_val = 'N/A (all NaNs)'\n",
+    "    \n",
+    "    print(f\"Shape: {latent_timestep_2_ensemble_mean.shape}\")\n",
+    "    print(f\"Total number of elements: {total_elements:,}\")\n",
+    "    print(f\"Memory usage:             {memory_mb:.2f} MB\")\n",
+    "    print(f\"Number of NaN values:     {nan_count:,} ({nan_count/total_elements:.2%})\")\n",
+    "    print(f\"Number of zero values:    {zero_count:,} ({zero_count/total_elements:.2%})\")\n",
+    "    print(f\"Minimum value:            {min_val}\")\n",
+    "    print(f\"Maximum value:            {max_val}\")\n",
+    "    print(f\"Mean value:               {mean_val}\")\n",
+    "    print(f\"Standard deviation:       {std_val}\")\n",
+    "    print(\"--------------------------------------------------\")\n",
+    "    \n",
+    "    # You can now use latent_timestep_2_dataset for further analysis\n",
+    "    # It has shape (batch: 1, lat: 181, lon: 360, latent_features: 512)\n",
+    "    \n",
+    "else:\n",
+    "    print(\"No latent representations were generated to extract second timestep.\")"
    ]
   },
   {
@@ -659,7 +734,7 @@
    "outputs": [],
    "source": [
     "# @title (Optional) Save the predictions.\n",
-    "predictions.to_zarr(\"predictions.zarr\")"
+    "predictions.to_zarr(\"predictions.zarr\", mode=\"w\")"
    ]
   },
   {
