--- a/gencast_demo_cloud_vm.ipynb
+++ b/gencast_demo_cloud_vm.ipynb
@@ -44,19 +44,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "JAX version:    0.6.1\n",
-      "Default backend: gpu\n",
-      "Devices:        [CudaDevice(id=0)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import jax\n",
     "print(\"JAX version:   \", jax.__version__)\n",
@@ -75,30 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "id": "233zaiZYqCnc"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/software/anaconda3.24/lib/python3.12/pty.py:95: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
-      "  pid, fd = os.forkpty()\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting https://github.com/deepmind/graphcast/archive/master.zip\n",
-      "^C\n",
-      "\u001b[31mERROR: Operation cancelled by user\u001b[0m\u001b[31m\n",
-      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# @title Pip install repo and dependencies\n",
     "%pip install --upgrade https://github.com/deepmind/graphcast/archive/master.zip"
@@ -723,7 +694,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "graphcast-env",
+   "display_name": "cdsapi-test-env",
    "language": "python",
    "name": "python3"
   },
@@ -737,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
